test/TestPhases/typechecker/valid/arithmetic.blc
@[EntryPoint]

activity main()
    var i: int8
    var n: nat8
    var b: bits8

    const ci: int8 = 127
    const cn: nat8 = 0
    const cb: bits8 = 0xFF


    n = (b as nat8) + n 
    i = ci - ci + 1
    i = (125: int8) + 2
    b = cb + 1 + cb // = 255
    b = ~(cb + 1 + cb) // = ~255 = 0
    b = -(1 : bits8) // = 255
    b = (-128 : bits8) // = 128
    
    await true
end