test/TestPhases/typechecker/invalid/unary2.blc

@[EntryPoint]
activity main()

    var n: nat8 = 1
    
    n = -n // unary minus on nat
    
    await true
end